Updated passport strategy

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "data movement"
   ],
   "dependencies": {
+    "passport-stackexchange": "https://github.com/geNAZt/passport-stackexchange",
     "bluemix-helper-config": "^0.1.13",
     "fs": "0.0.2",
     "lodash": "^4.3.0",
